<resources>
    <string name="app_name">DevelopDroid Market</string>
    <string name="text_form">Form</string>
    <string name="text_username">Email</string>
    <string name="text_password">Password</string>
    <string name="text_provider">Provider</string>
    <string name="text_Login">Login</string>
    <string name="text_logout">Log Out</string>
    <string name="text_create">Create</string>
    <string name="text_createaccount">Register</string>
    <string name="text_Forgot">Forgot</string>
    <string name="text_google">Google</string>
    <string name="text_Phone">Phone Number</string>
    <string name="hint_password">Your Password</string>
    <string name="text_Home">Home</string>
    <string name="preds_file">com.angee.developdroidmarket.PREFERENCE_FILE_KEY</string>
    <string name="text_name">Name</string>
    <string name="text_Lastname">Last Name</string>
    <string name="text_terms">Terms</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_errorAuth">Failed to authenticate</string>
    <string name="text_id">Id</string>
    <string name="test_ValidateError">Validate error</string>
    <string name="test_EmptyName">Empty Name</string>
    <string name="test_Emptylastname">Empty Last Name</string>
    <string name="test_Emptymobile">Empty Mobile</string>
    <string name="test_emptypassword">Empty Password</string>
    <string name="test_emptyemail">Empty Email</string>
    <string name="text_lowercase">At least one lowercase</string>
    <string name="text_uppercase">At least one uppercase</string>
    <string name="text_emailerror">It is not an email</string>
    <string name="text_register">Register</string>
    <string name="text_Iphone">Iphone</string>
    <string name="text_Iphone12">Iphone 12</string>
    <string name="text_Iphone12p">Iphone 12 Pro Max</string>
    <string name="text_Watch1">Watch S6</string>
    <string name="test_login">Login</string>
    <string name="test_userExample">example@domain.com</string>
    <string name="test_EmptyMail">Empty email</string>
    <string name="text_Iphonepro">Iphone</string>
    <string name="text_Watch">Watch</string>
    <string name="text_errorlogin">Invalid email or password</string>
    <string name="text_ViewTarea">Text View Tarea</string>
    <string name="text_fab">Element Added</string>
    <string name="text_character">At least one character</string>
    <string name="text_EmptyMail">Empty email</string>
    <string name="text_digit">At least one number</string>
    <string name="test_Recovery">Recovery</string>
    <string name="test_RecoveryQuestion">¿Have you forgotten your password?</string>
    <string name="default_web_client_id2" translatable="false">335791765583:android:92c0a3620f4177cdfb523a.apps.googleusercontent.com</string>
    <string name="test_passwordlength">Minimum Password Eight Characters</string>
    <string name="test_TermsLink">Terms and conditions</string>
    <string name="test_TermsMessage">Accept all policies, security and terms when registering.</string>

    <string name="test_ok">Accept</string>
    <string name="test_cancel">Cancel</string>
    <string name="text_return">Return</string>
    <string name="menu_home">Products</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="action_settings" translatable="false">Settings</string>


</resources>