<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayaut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:background="@drawable/customborder"
            android:src="@drawable/develop" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="email@domain.com"
            android:textSize="20dp"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/passwordEditTex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textSize="20dp"
            app:endIconMode="password_toggle"
            android:hint="@string/hint_password"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/SingUpButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:backgroundTint="@color/blue_500"
            android:textSize="20dp"
            android:onClick="OnLogin"
            android:text="Login"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"

                android:onClick="onAccount"
                android:backgroundTint="@color/grey_200"
                android:text="@string/text_createaccount"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:background="@color/white"
                android:drawableStart="@drawable/google2"
                android:onClick="OnGoogle"
                android:text="Google"
                android:textAlignment="textStart"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRecovery"
                android:gravity="center"
                android:padding="20px"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/test_RecoveryQuestion"
                android:linksClickable="true"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/red_200" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>













